--- a/style.css
+++ b/style.css
@@ -1,21 +1,19 @@
-/* Basic styles for the body */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: #DED0B6;
+    background-image: url(images/bg.jpg);
+    background-size: 100%;
 }
 
-/* Styles for the header */
 header {
-    background-color: #607274;
-    color: #FAEED1;
+    background-color: rgba(190, 174, 102, 0.6);
+    color: #362007;
     padding: 1rem;
     text-align: center;
 }
 
-/* Styles for the gallery section */
 section#gallery {
     padding: 1rem;
     margin: 1rem auto;
@@ -25,18 +23,33 @@ section#gallery {
     justify-content: center;
 }
 
-/* Styles for image containers */
+section#instagram {
+    padding: 1rem;
+    display: block;
+    justify-content: center;
+    border-radius: 8px;
+    border: solid #362007;
+    color: rgb(27, 20, 3);
+    margin: 1rem auto;
+    flex-wrap: wrap;
+    max-width: 500px;
+    background-color: rgba(184, 150, 99, 0.7) ;
+    font-size: larger;
+    font-weight: 500;
+    font-family: sans-serif;
+}
+
 .image-container {
     margin: 1rem;
     overflow: hidden;
     border-radius: 8px;
-    box-shadow: 0 0 10px #B2A59B;
+    box-shadow: 0 0 10px #cab3a1;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    flex: 1 1 calc(33.333% - 2rem); /* Flex-grow, flex-shrink, and flex-basis */
-    max-width: calc(33.333% - 2rem); /* Adjust based on the number of columns */
+    flex: 1 1 calc(33.333% - 2rem); 
+    max-width: calc(33.333% - 2rem); 
+    border: solid #3d2f1a ;
 }
 
-/* Styles for images inside containers */
 .image-container img {
     display: block;
     width: 100%;
@@ -44,15 +57,13 @@ section#gallery {
     border-radius: 8px;
 }
 
-/* Hover effect for image containers */
 .image-container:hover {
     transform: scale(1.05);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
-/* Styles for the footer */
 footer {
-    background-color: #3f6061;
+    background-color: #bb9161;
     color: #000000;
     text-align: center;
     padding: 1rem;
